// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceCountCard Component Snapshot with null instanceCount 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-47 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="makeStyles-contentDiv-49"
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-80"
        >
          Workflow Instances
        </div>
        <div
          className="MuiBox-root MuiBox-root-81"
        >
          --
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-cardIcon-46"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InstanceCountCard Component Snapshot with the instanceCount 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-47 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="makeStyles-contentDiv-49"
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-91"
        >
          Workflow Instances
        </div>
        <div
          className="MuiBox-root MuiBox-root-92"
        >
          10
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-cardIcon-46"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;
